Correções nos Módulos I e II

--- a/modulo2.html
+++ b/modulo2.html
@@ -71,8 +71,8 @@
                             <tr>
                                 <td rowspan=1>Cap&iacute;tulo 1 - Bibliotecas</td>
                                 <td rowspan=1>Slides</td>
-                                <td rowspan=1></td>
-                                <td rowspan=1></td>
+                                <td rowspan=1>Exerc&iacute;cios</td>
+                                <td rowspan=1>Respostas</td>
                                 <td></td>
                             </tr>
 
@@ -80,8 +80,8 @@
                             <tr>
                                 <td rowspan=1>Cap&iacute;tulo 2 - B&aacute;sico de Sistemas Operacionais</td>
                                 <td rowspan=1>Slides</td>
-                                <td rowspan=1></td>
-                                <td rowspan=1></td>
+                                <td rowspan=1>Exerc&iacute;cios</td>
+                                <td rowspan=1>Respostas</td>
                                 <td></td>
                             </tr>
 
@@ -89,8 +89,8 @@
                             <tr>
                                 <td rowspan=1>Cap&iacute;tulo 3 - Manipula&ccedil;&atilde;o de Arquivos</td>
                                 <td rowspan=1>Slides</td>
-                                <td rowspan=1></td>
-                                <td rowspan=1></td>
+                                <td rowspan=1>Exerc&iacute;cios</td>
+                                <td rowspan=1>Respostas</td>
                                 <td></td>
                             </tr>
 
@@ -98,8 +98,8 @@
                             <tr>
                                 <td rowspan=1>Cap&iacute;tulo 4 - Primeiro Programa Completo no Console</td>
                                 <td rowspan=1>Slides</td>
-                                <td rowspan=1></td>
-                                <td rowspan=1></td>
+                                <td rowspan=1>Exerc&iacute;cios</td>
+                                <td rowspan=1>Respostas</td>
                                 <td></td>
                             </tr>
 
@@ -107,8 +107,8 @@
                             <tr>
                                 <td rowspan=1>Cap&iacute;tulo 5 - Interface Gr&aacute;fica</td>
                                 <td rowspan=1>Slides</td>
-                                <td rowspan=1></td>
-                                <td rowspan=1></td>
+                                <td rowspan=1>Exerc&iacute;cios</td>
+                                <td rowspan=1>Respostas</td>
                                 <td></td>
                             </tr>
 
@@ -116,14 +116,14 @@
                             <tr>
                                 <td rowspan=1>Cap&iacute;tulo 6 - Primeiro Programa Completo com Interface Gr&aacute;fica</td>
                                 <td rowspan=1>Slides</td>
-                                <td rowspan=1></td>
-                                <td rowspan=1></td>
+                                <td rowspan=1>Exerc&iacute;cios</td>
+                                <td rowspan=1>Respostas</td>
                                 <td></td>
                             </tr>
                         </table>
                         </p>
                     </div>
-                    <p class="meta">Curitiba, 12 de agosto de 2014.</p>
+                    <p class="meta">Curitiba, 2 de mar&ccedil;o de 2015.</p>
                     <script src="https://apis.google.com/js/plusone.js">
                     </script>
                     <g:comments
