Correção no Módulo I

--- a/modulo1.html
+++ b/modulo1.html
@@ -191,7 +191,7 @@
                         </table>
                         </p>
                     </div>
-                    <p class="meta">Curitiba, 2 de mar&ccedil;o ' de 2015.</p>
+                    <p class="meta">Curitiba, 2 de mar&ccedil;o de 2015.</p>
                     <script src="https://apis.google.com/js/plusone.js">
                     </script>
                     <g:comments
