Incluindo capítulo exclusivo sobre DataTable no Módulo II

--- a/modulo2.html
+++ b/modulo2.html
@@ -96,7 +96,7 @@
 
                             <!-- capitulo 4 -->
                             <tr>
-                                <td rowspan=1>Cap&iacute;tulo 4 - Primeiro Programa Completo no Console</td>
+                                <td rowspan=1>Cap&iacute;tulo 4 - Classe DataTable</td>
                                 <td rowspan=1>Slides</td>
                                 <td rowspan=1>Exerc&iacute;cios</td>
                                 <td rowspan=1>Respostas</td>
@@ -105,7 +105,7 @@
 
                             <!-- capitulo 5 -->
                             <tr>
-                                <td rowspan=1>Cap&iacute;tulo 5 - Interface Gr&aacute;fica</td>
+                                <td rowspan=1>Cap&iacute;tulo 5 - Primeiro Programa Completo no Console</td>
                                 <td rowspan=1>Slides</td>
                                 <td rowspan=1>Exerc&iacute;cios</td>
                                 <td rowspan=1>Respostas</td>
@@ -114,7 +114,16 @@
 
                             <!-- capitulo 6 -->
                             <tr>
-                                <td rowspan=1>Cap&iacute;tulo 6 - Primeiro Programa Completo com Interface Gr&aacute;fica</td>
+                                <td rowspan=1>Cap&iacute;tulo 6 - Interface Gr&aacute;fica</td>
+                                <td rowspan=1>Slides</td>
+                                <td rowspan=1>Exerc&iacute;cios</td>
+                                <td rowspan=1>Respostas</td>
+                                <td></td>
+                            </tr>
+
+                            <!-- capitulo 7 -->
+                            <tr>
+                                <td rowspan=1>Cap&iacute;tulo 7 - Primeiro Programa Completo com Interface Gr&aacute;fica</td>
                                 <td rowspan=1>Slides</td>
                                 <td rowspan=1>Exerc&iacute;cios</td>
                                 <td rowspan=1>Respostas</td>
