--- a/modulo1.html
+++ b/modulo1.html
@@ -164,11 +164,17 @@
                             
                             <!-- capitulo 6 -->
                             <tr>
-                                <td rowspan=1>Cap&iacute;tulo 6 - Matrizes</td>
-                                <td rowspan=1><a href="curso/modulo1capitulo6.pptx">Slides</a></td>
-                                <td rowspan=1><a target="_blank" href="curso/modulo1lista6.html">Exerc&iacute;cios</a></td>
-                                <td rowspan=1><a target="_blank" href="curso/modulo1respostas6.html">Respostas</a></td>
+                                <td rowspan=3>Cap&iacute;tulo 6 - Matrizes</td>
+                                <td rowspan=3><a href="curso/modulo1capitulo6.pptx">Slides</a></td>
+                                <td rowspan=3><a target="_blank" href="curso/modulo1lista6.html">Exerc&iacute;cios</a></td>
+                                <td rowspan=3><a target="_blank" href="curso/modulo1respostas6.html">Respostas</a></td>
                                 <td>Videoaula 09/11/2014 (<a target="_blank" href="http://youtu.be/UcLC-v3l8Cw">video 1</a>) (<a target="_blank" href="http://youtu.be/PPD-2hKWfDs">video 2</a>)</td>
+                            </tr>
+                            <tr>
+                                <td>Videoaula 04/03/2015 (REVIS&Atilde;O DE RETORNO Parte 1) (<a target="_blank" href="http://youtu.be/B3wACbn9I1I">video 1</a>) (<a target="_blank" href="http://youtu.be/CmB5wCSDpL4">video 2</a>) (<a target="_blank" href="ttp://youtu.be/VjlNQ03Buwo">video 3</a>)</td>
+                            </tr>
+                            <tr>
+                                <td><a target="_blank" href="https://youtu.be/qxzyaXxNs2Y">Videoaula 11/03/2015 (REVIS&Atilde;O DE RETORNO Parte 2)</a></td>
                             </tr>
                             
                             <!-- capitulo 7 -->
