--- a/sobremim.html
+++ b/sobremim.html
@@ -79,8 +79,9 @@
                         <ul>
                             <li><a href="mailto:william.ivanski@gmail.com">E-mail: william.ivanski@gmail.com</a></li>
                             <li><a target="_blank" href="https://plus.google.com/+WilliamIvanski/about">Google+</a></li>
-                            <li><a target="_blank" href="https://www.facebook.com/william.ivanski">Facebook</a></li>
                             <li><a target="_blank" href="https://twitter.com/WilliamIvanski">Twitter</a></li>
+                            <li><a target="_blank" href="https://www.facebook.com/william.ivanski">Facebook</a></li>
+                            <li><a target="_blank" href="https://github.com/wind39">GitHub</a></li>
                         </ul>
                     </li>
                     <li>
