--- a/modulo1.html
+++ b/modulo1.html
@@ -185,11 +185,14 @@
                             
                             <!-- capitulo 7 -->
                             <tr>
-                                <td rowspan=1>Cap&iacute;tulo 7 - Fun&ccedil;&otilde;es e Procedimentos</td>
-                                <td rowspan=1>Slides</td>
-                                <td rowspan=1>Exerc&iacute;cios</td>
-                                <td rowspan=1>Respostas</td>
+                                <td rowspan=2>Cap&iacute;tulo 7 - Fun&ccedil;&otilde;es e Procedimentos</td>
+                                <td rowspan=2>Slides</td>
+                                <td rowspan=2>Exerc&iacute;cios</td>
+                                <td rowspan=2>Respostas</td>
                                 <td></td>
+                            </tr>
+                            <tr>
+                                <td><a target="_blank" href="">Videoaula 29/04/2015</a></td>
                             </tr>
                             
                             <!-- capitulo 8 -->
