--- a/curso/modulo1respostas6.html
+++ b/curso/modulo1respostas6.html
@@ -36,8 +36,7 @@
   <p>
    1) Dada uma matriz real <em>A</em> com <em>m</em> linhas e <em>n</em> colunas e um vetor real <em>V</em> com <em>n</em> elementos, determinar o produto de <em>A</em> por <em>V</em>.
   </p>
-  <pre><code>
-// float  - variável que representa número real de 32 bits
+  <pre><code>// float  - variável que representa número real de 32 bits
 // double - variável que representa número real de 64 bits
 
 double[,] a;
@@ -108,8 +107,7 @@ Console.ReadKey();
   <p>
    4) Dadas duas matrizes reais <em>A<sub>mxn</sub></em> e <em>B<sub>nxp</sub></em>, calcular o produto de <em>A</em> por <em>B</em>.
   </p>
-  <pre><code>
-// Matriz A:
+  <pre><code>// Matriz A:
 // m linhas (i é a variável de incremento)
 // n colunas (j é a variável de incremento)
 
