--- a/modulo1.html
+++ b/modulo1.html
@@ -189,7 +189,7 @@
                                 <td rowspan=1>Slides</td>
                                 <td rowspan=1>Exerc&iacute;cios</td>
                                 <td rowspan=1>Respostas</td>
-                                <td><a target="_blank" href="">Videoaula 29/04/2015</a></td>
+                                <td><a target="_blank" href="http://youtu.be/IZQ0eHZvmxE">Videoaula 29/04/2015</a></td>
                             </tr>
                             
                             <!-- capitulo 8 -->
