--- a/modulo1.html
+++ b/modulo1.html
@@ -185,11 +185,14 @@
                             
                             <!-- capitulo 7 -->
                             <tr>
-                                <td rowspan=1>Cap&iacute;tulo 7 - Fun&ccedil;&otilde;es e Procedimentos</td>
-                                <td rowspan=1>Slides</td>
-                                <td rowspan=1>Exerc&iacute;cios</td>
-                                <td rowspan=1>Respostas</td>
+                                <td rowspan=2>Cap&iacute;tulo 7 - Fun&ccedil;&otilde;es e Procedimentos</td>
+                                <td rowspan=2><a href="curso/modulo1capitulo7.pptx">Slides</a></td>
+                                <td rowspan=2><a target="_blank" href="curso/modulo1lista7.html">Exerc&iacute;cios</a></td>
+                                <td rowspan=2><a target="_blank" href="curso/modulo1respostas7.html">Respostas</a></td>
                                 <td><a target="_blank" href="http://youtu.be/IZQ0eHZvmxE">Videoaula 29/04/2015</a></td>
+                            </tr>
+                            <tr>
+                                <td><a target="_blank" href="http://www.youtube.com/watch?v=nyvBG5DNh4g">Videoaula 06/05/2015</a></td>
                             </tr>
                             
                             <!-- capitulo 8 -->
