Atualizando para reinicio do curso

--- a/curso.html
+++ b/curso.html
@@ -104,14 +104,13 @@
                         <p><b>Como funciona o curso?</b></p>
                         <ul>
                             <li>Voltado para quem est&aacute; aprendendo a programar</li>
-                            <li>Hangout 1x por semana, &agrave;s quartas-feiras das 20h &agrave;s 23h (exceto feriados)</li>
+                            <li>Hangout 1x por semana, aos s&aacute;bados &agrave;s 15h (exceto feriados)</li>
                             <li>Seguimos o cronograma no site, aula pode ser:</li>
                             <ul>
                                 <li>Te&oacute;rica: Apresento o conceito em slides e ao mesmo tempo vou escrevendo c&oacute;digo</li>
                                 <li>Pr&aacute;tica: Somente resolu&ccedil;&atilde;o de exerc&iacute;cios</li>
                             </ul>
                             <br/>
-                            <li>Intervalos de 5 minutos a cada 25 minutos de aula</li>
                         </ul>
                         <p><b>Como funciona a comunicação?</b></p>
                         <ul>
@@ -121,7 +120,7 @@
                             <li>Whatsapp: d&uacute;vidas e avisos r&aacute;pidos</li>
                         </ul>
                     </div>
-                    <p class="meta">Curitiba, 2 de mar&ccedil;o de 2015.</p>
+                    <p class="meta">Curitiba, 24 de junho de 2015.</p>
                     <script src="https://apis.google.com/js/plusone.js">
                     </script>
                     <g:comments
