--- a/modulo2.html
+++ b/modulo2.html
@@ -69,7 +69,7 @@
                         <table border=1>
                             <!-- capitulo 1 -->
                             <tr>
-                                <td rowspan=1>Cap&iacute;tulo 1 - Bibliotecas</td>
+                                <td rowspan=1>Cap&iacute;tulo 1 - Paradigma de Orienta&ccedil;&atilde;o a Objetos</td>
                                 <td rowspan=1>Slides</td>
                                 <td rowspan=1>Exerc&iacute;cios</td>
                                 <td rowspan=1>Respostas</td>
@@ -78,7 +78,7 @@
 
                             <!-- capitulo 2 -->
                             <tr>
-                                <td rowspan=1>Cap&iacute;tulo 2 - B&aacute;sico de Sistemas Operacionais</td>
+                                <td rowspan=1>Cap&iacute;tulo 2 - Bibliotecas</td>
                                 <td rowspan=1>Slides</td>
                                 <td rowspan=1>Exerc&iacute;cios</td>
                                 <td rowspan=1>Respostas</td>
@@ -87,7 +87,7 @@
 
                             <!-- capitulo 3 -->
                             <tr>
-                                <td rowspan=1>Cap&iacute;tulo 3 - Manipula&ccedil;&atilde;o de Arquivos</td>
+                                <td rowspan=1>Cap&iacute;tulo 3 - B&aacute;sico de Sistemas Operacionais</td>
                                 <td rowspan=1>Slides</td>
                                 <td rowspan=1>Exerc&iacute;cios</td>
                                 <td rowspan=1>Respostas</td>
@@ -96,7 +96,7 @@
 
                             <!-- capitulo 4 -->
                             <tr>
-                                <td rowspan=1>Cap&iacute;tulo 4 - Classe DataTable</td>
+                                <td rowspan=1>Cap&iacute;tulo 4 - Manipula&ccedil;&atilde;o de Arquivos</td>
                                 <td rowspan=1>Slides</td>
                                 <td rowspan=1>Exerc&iacute;cios</td>
                                 <td rowspan=1>Respostas</td>
@@ -105,7 +105,16 @@
 
                             <!-- capitulo 5 -->
                             <tr>
-                                <td rowspan=1>Cap&iacute;tulo 5 - Primeiro Programa Completo no Console</td>
+                                <td rowspan=1>Cap&iacute;tulo 5 - Classe DataTable</td>
+                                <td rowspan=1>Slides</td>
+                                <td rowspan=1>Exerc&iacute;cios</td>
+                                <td rowspan=1>Respostas</td>
+                                <td></td>
+                            </tr>
+
+                            <!-- capitulo 5 -->
+                            <tr>
+                                <td rowspan=1>Cap&iacute;tulo 6 - Primeiro Programa Completo no Console</td>
                                 <td rowspan=1>Slides</td>
                                 <td rowspan=1>Exerc&iacute;cios</td>
                                 <td rowspan=1>Respostas</td>
@@ -114,7 +123,7 @@
 
                             <!-- capitulo 6 -->
                             <tr>
-                                <td rowspan=1>Cap&iacute;tulo 6 - Interface Gr&aacute;fica</td>
+                                <td rowspan=1>Cap&iacute;tulo 7 - Interface Gr&aacute;fica</td>
                                 <td rowspan=1>Slides</td>
                                 <td rowspan=1>Exerc&iacute;cios</td>
                                 <td rowspan=1>Respostas</td>
@@ -123,7 +132,7 @@
 
                             <!-- capitulo 7 -->
                             <tr>
-                                <td rowspan=1>Cap&iacute;tulo 7 - Primeiro Programa Completo com Interface Gr&aacute;fica</td>
+                                <td rowspan=1>Cap&iacute;tulo 8 - Primeiro Programa Completo com Interface Gr&aacute;fica</td>
                                 <td rowspan=1>Slides</td>
                                 <td rowspan=1>Exerc&iacute;cios</td>
                                 <td rowspan=1>Respostas</td>
@@ -132,7 +141,7 @@
                         </table>
                         </p>
                     </div>
-                    <p class="meta">Curitiba, 2 de mar&ccedil;o de 2015.</p>
+                    <p class="meta">Curitiba, 24 de junho de 2015.</p>
                     <script src="https://apis.google.com/js/plusone.js">
                     </script>
                     <g:comments
