--- a/modulo1.html
+++ b/modulo1.html
@@ -60,7 +60,7 @@
                         <p>Requisitos:</p>
                         <ul>
                             <li>Vontade de aprender;</li>
-                            <li>Computador com sistema operacional Linux ou Windows;</li>
+                            <li>Computador com sistema operacional Linux, Windows ou Mac OS X;</li>
                             <li>Conex&atilde;o com a internet para assistir as aulas ao vivo ou pelo Youtube.</li>
                         </ul>
                         <p>Cronograma:</p>
@@ -72,7 +72,7 @@
                                 <td rowspan=1>Slides</td>
                                 <td rowspan=1></td>
                                 <td rowspan=1></td>
-                                <td></td>
+                                <td><a href="https://youtu.be/1J27Y7etn_E">Videoaula 27/06/2015</a></td>
                             </tr>
                             
                             <!-- capitulo 2 -->
