--- a/modulo2.html
+++ b/modulo2.html
@@ -60,7 +60,7 @@
                         <p>Requisitos:</p>
                         <ul>
                             <li>Vontade de aprender;</li>
-                            <li>Computador com sistema operacional Linux ou Windows;</li>
+                            <li>Computador com sistema operacional Linux, Windows ou Mac OS X;</li>
                             <li>Conex&atilde;o com a internet para assistir as aulas ao vivo ou pelo Youtube;</li>
                             <li>Conhecer o conte&uacute;do do <a href="modulo1.html">M&oacute;dulo I</a>.</li>
                         </ul>
@@ -70,10 +70,10 @@
                             <!-- capitulo 1 -->
                             <tr>
                                 <td rowspan=1>Cap&iacute;tulo 1 - Paradigma de Orienta&ccedil;&atilde;o a Objetos</td>
-                                <td rowspan=1>Slides</td>
+                                <td rowspan=1><a href="curso/modulo1capitulo1.pptx">Slides</a></td>
                                 <td rowspan=1>Exerc&iacute;cios</td>
                                 <td rowspan=1>Respostas</td>
-                                <td></td>
+                                <td><a href="https://youtu.be/g465hxGKkzk">Videoaula 27/06/2015</a></td>
                             </tr>
 
                             <!-- capitulo 2 -->
