--- a/modulo2.html
+++ b/modulo2.html
@@ -38,8 +38,8 @@
         <div id="menu">
             <ul>
                 <li class="first"><a href="index.html" accesskey="1" title="In&iacute;cio">In&iacute;cio</a></li>
-                <li><a class="current" href="projetos.html" accesskey="2" title="Projetos">Projetos</a></li>
-                <li><a href="artigos.html" accesskey="3" title="Artigos">Artigos</a></li>
+                <li><a class="current" href="curso.html" accesskey="2" title="Curso">Curso de Programa&ccedil;&atilde;o C#</a></li>
+                <li><a href="spartacus.html" accesskey="3" title="Spartacus">Biblioteca Spartacus</a></li>
                 <li><a href="sobremim.html" accesskey="4" title="Sobre mim">Sobre mim</a></li>
             </ul>
         </div>
