--- a/modulo2.html
+++ b/modulo2.html
@@ -167,6 +167,20 @@
                             <li><a href="modulo2.html">M&oacute;dulo II</a></li>
                             <li><a href="modulo3.html">M&oacute;dulo III</a></li>
                         </ul>
+                        <br/><br/>
+                        <h2><a>Runtimes para Download</a></h2>
+                        <ul>
+                            <li><a target="_blank" href="http://www.mono-project.com/download/">Plataforma Mono (Linux,Windows,MacOSX)</a></li>
+                            <li><a target="_blank" href="https://www.microsoft.com/pt-br/download/details.aspx?id=42642">Plataforma .NET (Windows)</a></li>
+                        </ul>
+                        <br/><br/>
+                        <h2><a>IDEs para Download</a></h2>
+                        <ul>
+                            <li><a target="_blank" href="http://www.monodevelop.com/download/">MonoDevelop (Linux) / Xamarin Studio (Windows,MacOSX)</a></li>
+                            <li><a target="_blank" href="https://www.visualstudio.com/en-us/products/visual-studio-express-vs.aspx">Microsoft Visual Studio Community / Express (Windows)</a></li>
+                            <li><a target="_blank" href="https://code.visualstudio.com/Download">Visual Studio Code (Linux,Windows,MacOSX)</a></li>
+                            <li><a target="_blank" href="http://www.icsharpcode.net/OpenSource/SD/Download/">SharpDevelop (Windows)</a></li>
+                        </ul>
                     </li>
                 </ul>
             </div>
