--- a/modulo2.html
+++ b/modulo2.html
@@ -70,7 +70,7 @@
                             <!-- capitulo 1 -->
                             <tr>
                                 <td rowspan=1>Cap&iacute;tulo 1 - Paradigma de Orienta&ccedil;&atilde;o a Objetos</td>
-                                <td rowspan=1>Slides</td>
+                                <td rowspan=1>Slides (<a href="curso/modulo2exemplos1.html">Exemplos</a>)</td>
                                 <td rowspan=1>Exerc&iacute;cios</td>
                                 <td rowspan=1>Respostas</td>
                                 <td><a href="https://youtu.be/g465hxGKkzk">Videoaula 27/06/2015</a></td>
