--- a/modulo1.html
+++ b/modulo1.html
@@ -68,14 +68,17 @@
                         <table border=1>
                             <!-- capitulo 1 -->
                             <tr>
-                                <td rowspan=2>Cap&iacute;tulo 1 - Introdu&ccedil;&atilde;o ao Curso</td>
-                                <td rowspan=2><a href="curso/modulo1capitulo1.pptx">Slides</a></td>
-                                <td rowspan=2></td>
-                                <td rowspan=2></td>
+                                <td rowspan=3>Cap&iacute;tulo 1 - Introdu&ccedil;&atilde;o ao Curso</td>
+                                <td rowspan=3><a href="curso/modulo1capitulo1.pptx">Slides</a></td>
+                                <td rowspan=3></td>
+                                <td rowspan=3></td>
                                 <td><a href="https://youtu.be/1J27Y7etn_E">Videoaula 27/06/2015</a></td>
                             </tr>
                             <tr>
                                 <td><a href="https://youtu.be/nNGDR10gJYk">Videoaula 04/07/2015</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://youtu.be/R9lshOAsxX8">Videoaula 11/07/2015</a></td>
                             </tr>
                             
                             <!-- capitulo 2 -->
