--- a/modulo2.html
+++ b/modulo2.html
@@ -69,14 +69,17 @@
                         <table border=1>
                             <!-- capitulo 1 -->
                             <tr>
-                                <td rowspan=2>Cap&iacute;tulo 1 - Paradigma de Orienta&ccedil;&atilde;o a Objetos</td>
-                                <td rowspan=2>Slides (<a href="curso/modulo2exemplos1.html">Exemplos</a>)</td>
-                                <td rowspan=2>Exerc&iacute;cios</td>
-                                <td rowspan=2>Respostas</td>
+                                <td rowspan=3>Cap&iacute;tulo 1 - Paradigma de Orienta&ccedil;&atilde;o a Objetos</td>
+                                <td rowspan=3>Slides (<a target="_blank" href="curso/modulo2exemplos1.html">Exemplos</a>)</td>
+                                <td rowspan=3>Exerc&iacute;cios</td>
+                                <td rowspan=3>Respostas</td>
                                 <td><a href="https://youtu.be/g465hxGKkzk">Videoaula 27/06/2015</a></td>
                             </tr>
                             <tr>
                                 <td><a href="https://youtu.be/QE6Qfl92dc8">Videoaula 04/07/2015</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://youtu.be/hXKksJJx3BQ">Videoaula 11/07/2015</a></td>
                             </tr>
 
                             <!-- capitulo 2 -->
